fixed footer layout on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -171,3 +171,7 @@ body > .container.keyword-search {
 input[type='checkbox'][name='keyword_ids[]'] {
   margin-right: 2px;
 }
+
+.navbar-toggler {
+  float: right;
+}
